--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -20,17 +20,6 @@
   padding: 0 0.5em;
 }
 
-.movie .lazyImage {
-  position: relative;
-  overflow: hidden;
-  width: 20vw;
-  border-radius: 12px;
-}
-.movie:has(.title) .shadow {
-  width: 100%;
-  height: 100%;
-  background: black;
-}
 .title p {
   margin: 5px;
 }
@@ -54,4 +43,16 @@
 .title:has(~ .title:hover),
 .title:hover:has(~ .title) {
   opacity: 0;
+}
+
+.shadow {
+  width: 100%;
+  height: 20%;
+  bottom: 0;
+  z-index: 1;
+  position: absolute;
+}
+.movie:has(.title:hover) .shadow {
+    background: linear-gradient(180deg, hsla(0, 0%, 0%, 0), var(--secondary));
+
 }
